src/main/metadata/objects/Issue__c.object
<CustomObject>
    <description>PMO: For tracking project related issue</description>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Counterpart__c</fullName>
        <label>Counterpart</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_1 Requirement workbook - Contact Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_2 Requirement workbook - Campaign Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_3 Requirement workbook - Case &amp; Knowledge Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_4 User Role / Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_5 Requirement workbook - Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_6 Requirement workbook - Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_7 Requirement workbook - Complaint Management Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_8 Requirement workbook - Complaint Management Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_9 Requirement workbook - CTI &amp; Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_10 Requirement workbook - Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_11 Requirement workbook - Customer Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_12 Data Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_13 SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_14 CSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD_1 SFDC Conf. Workbook Contact, Case, Knowledge, Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD_2 SFDC Conf. Workbook Lead, Dealer, M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD_3 SFDC Conf. Workbook Complaint, Contact, Social, CLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_1 IT Architecture Document Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_2 IT Architecture Document Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_3 IT Architecture Document Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_4 IT Architecture Document Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_5 TD/GenIFC GSSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_6 TD/GenIFC iCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_7 TD/GenIFC CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_8 TD/GenIFC LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_9 TD/GenIFC Mini Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_10 TD/GenIFC Social Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_11 TD/GenIFC CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TE_1 Testing Strategy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Formula_calculates_reminder_date__c</fullName>
        <formula>MOD(TODAY() - DATE(1900, 1, 7), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Hidden Formula calculates reminder date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Raise to PMO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Account/Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Aftersales/Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Log_ID__c</fullName>
        <externalId>true</externalId>
        <label>Project Log ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <label>Raised By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_Date__c</fullName>
        <label>Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_No_of__c</fullName>
        <label>Reference No. of Process/UC/BQ</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Requirement_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requirement/User Story</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>*Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Solution__c</fullName>
        <label>Resolution/Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <label>Screenshot</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propose to Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Market_Country__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Raise to PMO</value>
        </filters>
        <label>open PMO issues</label>
    </listViews>
    <listViews>
        <fullName>AllClosed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Change_Request__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Related_Requirement_User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>AllRaisetoPMOOpen</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Comments__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Raised_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Raised_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Raise to PMO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.PMO_Issue</value>
        </filters>
        <label>All Raise to PMO</label>
    </listViews>
    <listViews>
        <fullName>AllRaisetoPMOOpen1</fullName>
        <booleanFilter>1 and 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Comments__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Raised_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Raised_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Issue_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Raise to PMO</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>All Raise to PMO (Open)</label>
    </listViews>
    <listViews>
        <fullName>All_MBAuP</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Change_Request__c</columns>
        <columns>Assign_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.PMO_Issue</value>
        </filters>
        <label>All MBAuP</label>
    </listViews>
    <listViews>
        <fullName>All_Open_MBAuP</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Change_Request__c</columns>
        <columns>Assign_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.PMO_Issue</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open MBAuP</label>
    </listViews>
    <listViews>
        <fullName>All_Open_assigned_to_VLEE</fullName>
        <columns>NAME</columns>
        <columns>Raised_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Change_Request__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Related_Requirement_User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Assign_To__c</field>
            <operation>equals</operation>
            <value>Vivian Lee</value>
        </filters>
        <label>All Open - assigned to VLEE</label>
    </listViews>
    <listViews>
        <fullName>InternalOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <label>Internal Open</label>
        <sharedTo>
            <group>Dev_Team</group>
            <group>Function_Team</group>
            <group>Test_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Open</label>
    </listViews>
    <listViews>
        <fullName>My_Delayed_Issues</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delayed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Propose to Close,Closed</value>
        </filters>
        <label>My Delayed Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Issues</fullName>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Screenshot__c</columns>
        <columns>Resolution_Solution__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.PMO_Issue</value>
        </filters>
        <label>My Open  PMO Issues</label>
    </listViews>
    <listViews>
        <fullName>My_in_Progress_Issues</fullName>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My in Progress Issues</label>
    </listViews>
    <listViews>
        <fullName>OldInternalOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>N_WEEKS_AGO:2</value>
        </filters>
        <label>Old Internal Open</label>
        <sharedTo>
            <group>Dev_Team</group>
            <group>Function_Team</group>
            <group>Test_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RaisetoMBOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <columns>Assign_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Raise to MB</value>
        </filters>
        <label>Raise to MB Open</label>
        <sharedTo>
            <group>Dev_Team</group>
            <group>Function_Team</group>
            <group>Test_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ISSUE-{0000}</displayFormat>
        <label>Issue No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <recordTypes>
        <fullName>Non_PMO_Issue</fullName>
        <active>true</active>
        <description>For NTT to manage internal issues</description>
        <label>Non-PMO Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMO_Issue</fullName>
        <active>true</active>
        <description>For PMO meetings</description>
        <label>PMO Issue</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Only_Owner_can_close_Issue</fullName>
        <active>true</active>
        <errorConditionFormula>OwnerId &lt;&gt; $User.Id &amp;&amp; ISCHANGED( Status__c ) &amp;&amp; TEXT(Status__c)=&quot;Closed&quot;</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only Owner can close the issue. Please contact the Issue Owner to close it.</errorMessage>
    </validationRules>
</CustomObject>